lib/tests/fixtures/compiler/evaluation/type_then_class.baseline
Error: type_then_class.pp:5:7: node 'test': 'foo' was previously defined as a defined type at type_then_class.pp:1.
  class foo {
        ^~~
